# Home-weather-station

./: README.md
arduino/: temp.ino
c++/: CMakeLists.txt
c++/CMakeProject3/: CMakeLists.txt  lib.h  meteo_client.cpp  resources.qrc
c++/CMakeProject3/com_port/: com_port.h  com_potr.cpp
c++/CMakeProject3/mainWindow/: mainWindow.cpp  mainWindow.h
c++/CMakeProject3/middlepanel/: middle_panel.cpp  middle_panel.h
c++/CMakeProject3/qss/: style.qss
c++/CMakeProject3/toppanel/: topPanel.cpp  topPanel.h
python/meteo_client2/: main.py  nuitka-crash-report.xml  pressure_widjet.py  style.qss  temperature_widget.py  topPanel.py  wind_widjet.py  working_comport.py
